--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body id="main-page">
 
-        <h1 class="main-h"><em>aOdin Recipes</em></h1>
+        <h1 class="main-h"><em>Odin Recipes</em></h1>
         
         <img id="ramsay-gif" src="img/ramsay.gif" alt="Ramsay">
         <br>
